kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: page-downloader
  namespace: homework
  labels:
    app: homework-deploment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homework-1
  template:
    metadata:
      labels:
        app: homework-1
    spec:
      serviceAccountName: monitoring-sa
      volumes:
        - name: otus-storage
          persistentVolumeClaim:
            claimName: otus-pvc
        - name: config
          configMap:
            name: otus-config
            items:
              - key: "otus_user"
                path: "otus_user"
              - key: "otus_password"
                path: "otus_password"

      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: "10m"
              memory: "64Mi"
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: otus-storage
              mountPath: /usr/share/nginx/html
            - name: config
              mountPath: /homework/conf
              readOnly: true
          readinessProbe:
            httpGet:
              path: /index.html
              port: 80

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
